--- a/.github/workflows/prebuilt.yml
+++ b/.github/workflows/prebuilt.yml
@@ -6,40 +6,28 @@ on:
     paths:
       - '.github/workflows/prebuilt.yml'
 jobs:
-  windows:
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        repository: ejoy/ant
-        submodules: true
-    - uses: actboy168/setup-luamake@master
-    - run: luamake all -mode release -arch x86_64
-    - uses: actions/upload-artifact@v4
-      with:
-        name: ant-windows-x86_64
-        path: |
-          bin/
-          engine/
-          pkg/
-          test/
-          tools/
-          README.md
-          LICENSE
-  macos:
-    runs-on: macos-13
+  prebuilt:
+    strategy:
+      matrix:
+        include:
+          - os: windows-latest
+            arch: x86_64
+          - os: macos-13
+            arch: arm64
+    runs-on: ${{ matrix.os }}
     steps:
     - name: switch to Xcode 15.1
+      if: ${{ runner.os == 'macOS' }}
       run: sudo xcode-select -s "/Applications/Xcode_15.1.app"
     - uses: actions/checkout@v3
       with:
         repository: ejoy/ant
         submodules: true
     - uses: actboy168/setup-luamake@master
-    - run: luamake all -mode release -arch arm64
+    - run: luamake all -mode release -arch ${{ matrix.arch }}
     - uses: actions/upload-artifact@v4
       with:
-        name: ant-macos-arm64
+        name: ant-${{ runner.os }}-${{ matrix.arch }}
         path: |
           bin/
           engine/
