--- a/.github/workflows/prebuilt.yml
+++ b/.github/workflows/prebuilt.yml
@@ -35,6 +35,7 @@ jobs:
           !bin/**/*.a
           !bin/**/*.exp
           !bin/**/*.lib
+          !bin/**/*.ilk
           engine/
           pkg/
           test/
