--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -6,7 +6,7 @@ on:
     - cron: '0 10 * * 1-5'
   push:
     paths:
-      - '.github/workflows/prebuilt.yml'
+      - '.github/workflows/nightly.yml'
 jobs:
   prebuilt:
     strategy:
@@ -24,10 +24,12 @@ jobs:
     - name: switch to Xcode 15.1
       if: ${{ matrix.os == 'macos' }}
       run: sudo xcode-select -s "/Applications/Xcode_15.1.app"
+    - uses: actboy168/setup-luamake@master
     - uses: actions/checkout@v3
       with:
         repository: ejoy/ant
         submodules: true
+    - run: luamake all -mode release -arch ${{ matrix.arch }}
     - uses: vimtor/action-zip@v1.1
       with:
         dest: ant-${{ matrix.os }}-${{ matrix.arch }}.zip
