--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        repository: ejoy/ant
+        sparse-checkout: ''
+        sparse-checkout-cone-mode: false
     - run: git push --delete origin nightly
       continue-on-error: true
   nightly:
