--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,19 +14,21 @@ jobs:
     - uses: actions/github-script@v7 
       with: 
         script: |
-          let releaseIds = [];
           const releases = github.rest.repos.listReleases({
             owner: context.repo.owner,
             repo: context.repo.repo,
           })
-          releaseIds = releases.data
-            .filter(({ tag_name }) => tag_name === 'nightly')
-            .map(({ id }) => id);
+          let releaseIds = [];
+          for (const release of releases.data) {
+            if (release.tag_name === 'nightly') {
+              releaseIds.push(release.id);
+            }
+          }
           for (const release_id of releaseIds) {
             github.rest.repos.deleteRelease({
-              context.repo.owner,
-              context.repo.repo,
-              release_id,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: release_id,
             });
           }
   nightly:
