--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,22 +14,23 @@ jobs:
     - uses: actions/github-script@v7 
       with: 
         script: |
+          await github.rest.git.deleteRef({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            ref: `tags/nightly`,
+          });
           const releases = await github.rest.repos.listReleases({
             owner: context.repo.owner,
             repo: context.repo.repo,
-          })
-          let releaseIds = [];
+          });
           for (const release of releases.data) {
             if (release.tag_name === 'nightly') {
-              releaseIds.push(release.id);
+              await github.rest.repos.deleteRelease({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                release_id: release.id,
+              });
             }
-          }
-          for (const release_id of releaseIds) {
-            await github.rest.repos.deleteRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: release_id,
-            });
           }
   nightly:
     needs: init
