--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,4 +1,4 @@
-name: prebuilt
+name: nightly
 permissions:
   contents: write
 on:
@@ -25,11 +25,13 @@ jobs:
               });
             }
           }
-          await github.rest.git.deleteRef({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            ref: `tags/nightly`,
-          });
+          try {
+            await github.rest.git.deleteRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: `tags/nightly`,
+            });
+          } catch (error) {}
   nightly:
     needs: init
     strategy:
